<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:paddingHorizontal="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/singleMealFormFragment"
    tools:context=".fragments.SingleMealFormFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome_pasto_singolo_pasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:hint="Name meal"
        android:inputType="textPersonName"
        app:startIconDrawable="@drawable/ic_baseline_restaurant_24">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp">
    <TextView
        android:id="@+id/quantita_umido_statico_inserisci_pasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quantity of wet:" />

    <EditText
        android:id="@+id/numero_quantita_umido_inserisci_pasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:hint="50" />
        <TextView
            android:id="@+id/peso_umido_inserisci_pasto"
            android:layout_width="87dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="g" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/quantita_croccantini_statico_inserisci_pasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="Quantity of kibble:" />

        <EditText
            android:id="@+id/numero_quantita_croccantini_inserisci_pasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="35"
            android:layout_marginLeft="12dp"/>



        <TextView
            android:id="@+id/peso_croccantini_inserisci_pasto"
            android:layout_width="87dp"
            android:layout_height="34dp"
            android:text="g"
            android:layout_marginLeft="9dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/data_pasto_da_inserire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        app:startIconDrawable="@drawable/ic_baseline_event_24">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginBottom="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ora_pasto_da_inserire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/time"
        android:visibility="visible"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginBottom="15dp"
            android:visibility="visible"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/note_inserisci_pasto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:layout_marginTop="20dp">

    <Button
        android:id="@+id/cancella_inserisci_pasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="#e2e4e0"
        android:textColor="#000000"
        android:text="cancel" />
    <Button
        android:id="@+id/salva_inserisci_pasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="Save" />
</LinearLayout>


</LinearLayout>
</ScrollView>